feat: :sparkles: Add support for set employee depression state
